--- a/src/Components/productpage.css
+++ b/src/Components/productpage.css
@@ -1,12 +1,33 @@
 #page{
+    display: grid;
+    grid-template-columns: 700px 100px;
     border-radius: 10px;
-    width: 500px;
-    height: 300px;
+    width: 900px;
+    height: 500px;
     background-color: #e9e9e9;
     box-shadow: 0 0 10px 5px rgb(70, 70, 70);
 }
 #main{
-    background-color: black;
+    padding: 45px;
+}
+h2, h6{
+    text-transform: uppercase;
+}
+.product-body, .product-footer{
+    margin-top: 50px;
+}
+.product-sub-text{
+    color: rgb(144, 143, 141);
+    margin-top: -10px;
+    text-transform: uppercase;
+}
+.product-price{
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: rgb(240, 205, 8);
+}
+.product-list >li{
+    color: rgb(144, 143, 141);
 }
 #side{
 display: flex;
@@ -17,17 +38,17 @@ width: fit-content;
 .trapezoid {
     border: 0 solid rgb(179, 0, 255);
     border-radius: 0 10px 10px 0;
-    width: 100px;
+    width: 200px;
     float: right;
-    border-bottom-width: 300px;
+    border-bottom-width: 500px;
     border-left-width: 30px;
     border-left-color: transparent;
 }
-.img{
-    width: 116px;
-    height: 131px;
+.img1{
+    width: 260px;
+    height: 300px;
     position: absolute;
     top: 70px;
-    left: -30px;
-    filter: drop-shadow(10px 10px 10px rgb(41, 41, 41));
+    left: -100px;
+    filter: drop-shadow(17px 0px 10px rgb(41, 41, 41));
 }
